--- a/index.html
+++ b/index.html
@@ -4,67 +4,74 @@
 <head>
     <meta charset="UTF-8" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css/css" />
 </head>
 
-<body>
+<body class="page">
     <!-- header -->
-    <header>
+    <header class="page-header">
         <nav>
-            <a href="" lang="en"> WebStudio </a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a class="logo link" href="" lang="en">Web<span class="logo-accent">Studio</span>
+        </a>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Студия</a></li>
+                <li><a href="" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+        <ul class="contact-nav list">
+            <li>
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tel:+380961111111" class="link">+380961111111</a></li>
         </ul>
     </header>
     <main>
         <!--HERO-->
-        <section>
-            <h1>
+        <section class="hero">
+            <h1 class="hero-title">
                 ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br /> ДЛЯ ВАШЕГО БИЗНЕСА
             </h1>
-            <button type="button">Заказать услугу</button>
+            <button class="modal-btn" type="button">Заказать услугу</button>
         </section>
         <!--ABOUT-->
-        <section>
-            <h2>Преимущества</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Преимущества</h2>
+            <ul class="list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>
+                    <h3 class="feature-title">Внимание к деталям</h3>
+                    <p class="text">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>
+                    <h3 class="feature-title">Пунктуальность</h3>
+                    <p class="text">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>
+                    <h3 class="feature-title">Планирование</h3>
+                    <p class="text">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>
+                    <h3 class="feature-title">Современные технологии</h3>
+                    <p class="text">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
         <!--GALLERY-->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
                 <li>
                     <img src="/images/website_design.jpg" alt="Дизайн вебсайта" width="370" height="294" />
                 </li>
@@ -77,49 +84,49 @@
             </ul>
         </section>
         <!--OUR TEAM-->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <img src="/images/img-1.jpg" alt="Игорь Д." width="270" height="260" />
                     <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <p lang="en" class="text">Product Designer</p>
                 </li>
                 <li>
                     <img src="/images/img-2.jpg" alt="Ольга Р." width="270" height="260" />
                     <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <p lang="en" class="text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="/images/img-3.jpg" alt="Николай Т." width="270" height="260" />
                     <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <p lang="en" class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="/images/img-4.jpg" alt="Михаил Е." width="270" height="260" />
                     <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <p lang="en" class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="" lang="en"> WebStudio </a>
+        <a class="logo link" href="" lang="en">Web<span class="logo-accent">Studio</span</a>
         <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
-              href="https://goo.gl/maps/fRFSX92PW33ccEuu6"
+              href="https://goo.gl/maps/fRFSX92PW33ccEuu6" class="link"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+380961111111</a>
+            <a href="tel:+380961111111" class="link">+380961111111</a>
           </li>
         </ul>
       </address>
