--- a/portfolio.html
+++ b/portfolio.html
@@ -4,27 +4,32 @@
 <head>
     <meta charset="UTF-8" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="/css/styles.css/css" />
 </head>
 
-<body>
+<body class="page">
     <!-- header -->
-    <header>
+    <header class="page-header">
         <nav>
-            <a href="" lang="en"> WebStudio </a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a class="logo link" href="" lang="en">Web<span class="logo-accent">Studio</span>
+        </a>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Студия</a></li>
+                <li><a href="" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+        <ul class="auth-nav list">
+            <li>
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tel:+380961111111" class="link">+380961111111</a></li>
         </ul>
     </header>
     <main>
         <div>
-            <ul>
+            <ul class="list">
                 <li><button type="button">Все</button></li>
                 <li><button type="button">Веб-сайты</button></li>
                 <li><button type="button">Приложения</button></li>
@@ -32,9 +37,9 @@
                 <li><button type="button">Маркетинг</button></li>
             </ul>
         </div>
-        <section>
-            <h1>Каталог работ</h1>
-            <ul>
+        <section class="section">
+            <h1 class="section title">Каталог работ</h1>
+            <ul class="list">
                 <li>
                     <a href="">
                         <img src="/images/portfolio_1.jpg" alt="наши сотрудники" width="370" height="294" />
@@ -102,9 +107,9 @@
         </section>
     </main>
     <footer>
-        <a href="" lang="en"> WebStudio </a>
+        <a class="logo link" href="" lang="en">Web<span class="logo-accent">Studio</span</a>
         <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/fRFSX92PW33ccEuu6"
