--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css/css" />
 </head>
 
@@ -39,7 +39,7 @@
             <button class="modal-btn" type="button">Заказать услугу</button>
         </section>
         <!--ABOUT-->
-        <section class="section">
+        <section class="section title-theme-light">
             <h2 class="section-title">Преимущества</h2>
             <ul class="list">
                 <li>
@@ -69,7 +69,7 @@
             </ul>
         </section>
         <!--GALLERY-->
-        <section class="section">
+        <section class="section title-theme-light">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
@@ -84,7 +84,7 @@
             </ul>
         </section>
         <!--OUR TEAM-->
-        <section class="section">
+        <section class="section section-title-theme-light">
             <h2 class="section-title">Наша команда</h2>
             <ul class="list">
                 <li>
@@ -110,27 +110,31 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a class="logo link" href="" lang="en">Web<span class="logo-accent">Studio</span</a>
-        <address>
+    <footer class="footer">
+        <a class="logo link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
+      >
+      <address>
         <ul class="list">
           <li>
             <a
-              href="https://goo.gl/maps/fRFSX92PW33ccEuu6" class="link"
+              href="https://goo.gl/maps/fRFSX92PW33ccEuu6"
               target="_blank"
-              rel="noopener noreferrer"
+              class="link contact-info"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@example.com" class="link">info@example.com</a>
+            <a href="mailto:info@example.com" class="link contact-info-item"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111" class="link">+380961111111</a>
+            <a href="tel:+380961111111" class="link contact-info-item"
+              >+380961111111</a
+            >
           </li>
         </ul>
       </address>
     </footer>
-</body>
-
+  </body>
 </html>
