--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
         <a class="logo link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
       >
       <address>
-        <ul class="contact-nav list">
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/fRFSX92PW33ccEuu6"
