--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
 <body class="page">
     <!-- header -->
     <header class="page-header">
-        <nav>
+        <nav class="navigation">
             <a class="logo link" href="" lang="en">Web<span class="logo-accent">Studio</span>
         </a>
-            <ul class="site-nav list">
-                <li><a href="" class="link">Студия</a></li>
-                <li><a href="" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <ul class="menu list">
+                <li class="menu-item">
+                    <a href="index.html" class="site-nav link">Студия</a>
+                </li>
+                <li class="menu-item">
+                    <a href="portfolio.html" class="site-nav link">Портфолио</a>
+                </li>
+                <li class="menu-item">
+                    <a href="" class="site-nav link">Контакты</a>
+                </li>
             </ul>
         </nav>
-        <ul class="contact-nav list">
+        <ul class="menu list">
             <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
+                <a href="mailto:info@devstudio.com" class="contact-nav link">info@devstudio.com</a
           >
         </li>
-        <li><a href="tel:+380961111111" class="link">+380961111111</a></li>
+        <li>
+          <a href="tel:+380961111111" class="contact-nav link">+380961111111</a>
+            </li>
         </ul>
     </header>
     <main>
