Работали над ошибками

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                     <a href="index.html" class="site-nav link">Студия</a>
                 </li>
                 <li class="menu-item">
-                    <a href="portfolio.html" class="site-nav link">Портфолио</a>
+                    <a href="portfolio.html" class="site-nav link current">Портфолио</a>
                 </li>
                 <li class="menu-item">
                     <a href="" class="site-nav link">Контакты</a>
@@ -42,7 +42,7 @@
         <div>
             <ul class="list">
                 <li>
-                    <button class="style-btn" type="button">Все</button>
+                    <button class="style-btn current" type="button">Все</button>
                 </li>
                 <li>
                     <button class="style-btn" type="button">Веб-сайты</button>
