--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
             <ul class="menu list">
                 <li class="menu-item">
-                    <a href="index.html" class="site-nav link">Студия</a>
+                    <a href="index.html" class="site-nav link current">Студия</a>
                 </li>
                 <li class="menu-item">
                     <a href="portfolio.html" class="site-nav link">Портфолио</a>
@@ -94,26 +94,26 @@
         <!--OUR TEAM-->
         <section class="section section-title-theme-light">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="list">
+            <ul class="employees list">
                 <li>
                     <img src="/images/img-1.jpg" alt="Игорь Д." width="270" height="260" />
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en" class="text">Product Designer</p>
+                    <h3 class="employees-name">Игорь Демьяненко</h3>
+                    <p lang="en" class="employees-position">Product Designer</p>
                 </li>
                 <li>
                     <img src="/images/img-2.jpg" alt="Ольга Р." width="270" height="260" />
-                    <h3>Ольга Репина</h3>
-                    <p lang="en" class="text">Frontend Developer</p>
+                    <h3 class="employees-name">Ольга Репина</h3>
+                    <p lang="en" class="employees-position">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="/images/img-3.jpg" alt="Николай Т." width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en" class="text">Marketing</p>
+                    <h3 class="employees-name">Николай Тарасов</h3>
+                    <p lang="en" class="employees-position">Marketing</p>
                 </li>
                 <li>
                     <img src="/images/img-4.jpg" alt="Михаил Е." width="270" height="260" />
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en" class="text">UI Designer</p>
+                    <h3 class="employees-name">Михаил Ермаков</h3>
+                    <p lang="en" class="employees-position">UI Designer</p>
                 </li>
             </ul>
         </section>
