--- a/index.html
+++ b/index.html
@@ -34,94 +34,137 @@
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contact-nav link">+380961111111</a>
-            </li>
-        </ul>
+          <a href="tel:+380961111111" class="contact-nav link"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
-        <!--HERO-->
-        <section class="hero">
-            <h1 class="hero-title">
-                ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br /> ДЛЯ ВАШЕГО БИЗНЕСА
-            </h1>
-            <button class="modal-btn" type="button">Заказать услугу</button>
-        </section>
-        <!--ABOUT-->
-        <section class="section title-theme-light">
-            <h2 class="section-title">Преимущества</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="feature-title">Внимание к деталям</h3>
-                    <p class="text">
-                        Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Пунктуальность</h3>
-                    <p class="text">
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Планирование</h3>
-                    <p class="text">
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Современные технологии</h3>
-                    <p class="text">
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <!--GALLERY-->
-        <section class="section title-theme-light">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li>
-                    <img src="/images/website_design.jpg" alt="Дизайн вебсайта" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="/images/pallete_on_tablet.jpg" alt="Палитра на планшете" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="/images/mobile_application_development.jpg" alt="Разработка мобильного приложения" width="370" height="294" />
-                </li>
-            </ul>
-        </section>
-        <!--OUR TEAM-->
-        <section class="section section-title-theme-light">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="employees list">
-                <li>
-                    <img src="/images/img-1.jpg" alt="Игорь Д." width="270" height="260" />
-                    <h3 class="employees-name">Игорь Демьяненко</h3>
-                    <p lang="en" class="employees-position">Product Designer</p>
-                </li>
-                <li>
-                    <img src="/images/img-2.jpg" alt="Ольга Р." width="270" height="260" />
-                    <h3 class="employees-name">Ольга Репина</h3>
-                    <p lang="en" class="employees-position">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="/images/img-3.jpg" alt="Николай Т." width="270" height="260" />
-                    <h3 class="employees-name">Николай Тарасов</h3>
-                    <p lang="en" class="employees-position">Marketing</p>
-                </li>
-                <li>
-                    <img src="/images/img-4.jpg" alt="Михаил Е." width="270" height="260" />
-                    <h3 class="employees-name">Михаил Ермаков</h3>
-                    <p lang="en" class="employees-position">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <!--HERO-->
+      <section class="hero">
+        <h1 class="hero-title">
+          ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+          ДЛЯ ВАШЕГО БИЗНЕСА
+        </h1>
+        <button class="modal-btn" type="button">Заказать услугу</button>
+      </section>
+      <!--ABOUT-->
+      <section class="section-theme-light">
+        <h2 class="section-title">Преимущества</h2>
+        <ul class="list">
+          <li>
+            <h3 class="feature-title">Внимание к деталям</h3>
+            <p class="text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3 class="feature-title">Пунктуальность</h3>
+            <p class="text">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="feature-title">Планирование</h3>
+            <p class="text">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="feature-title">Современные технологии</h3>
+            <p class="text">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--GALLERY-->
+      <section class="section-title-theme-light">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
+          <li>
+            <img
+              src="/images/website_design.jpg"
+              alt="Дизайн вебсайта"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/pallete_on_tablet.jpg"
+              alt="Палитра на планшете"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/mobile_application_development.jpg"
+              alt="Разработка мобильного приложения"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <!--OUR TEAM-->
+      <section class="title-theme-light">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="employees list">
+          <li>
+            <img
+              src="/images/img-1.jpg"
+              alt="Игорь Д."
+              width="270"
+              height="260"
+            />
+            <h3 class="employees-name">Игорь Демьяненко</h3>
+            <p lang="en" class="employees-position">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="/images/img-2.jpg"
+              alt="Ольга Р."
+              width="270"
+              height="260"
+            />
+            <h3 class="employees-name">Ольга Репина</h3>
+            <p lang="en" class="employees-position">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/images/img-3.jpg"
+              alt="Николай Т."
+              width="270"
+              height="260"
+            />
+            <h3 class="employees-name">Николай Тарасов</h3>
+            <p lang="en" class="employees-position">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/img-4.jpg"
+              alt="Михаил Е."
+              width="270"
+              height="260"
+            />
+            <h3 class="employees-name">Михаил Ермаков</h3>
+            <p lang="en" class="employees-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
-        <a class="logo link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
+      <a class="logo link" href="" lang="en"
+        >Web<span class="logo-accent-footer">Studio</span></a
       >
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a
@@ -138,7 +181,7 @@
           </li>
           <li>
             <a href="tel:+380961111111" class="link contact-info-item"
-              >+380961111111</a
+              >+38 096 111 11 11</a
             >
           </li>
         </ul>
