--- a/portfolio.html
+++ b/portfolio.html
@@ -34,103 +34,108 @@
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contact-nav link">+380961111111</a>
-            </li>
-        </ul>
+          <a href="tel:+380961111111" class="contact-nav link"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
-        <div>
-            <ul class="list">
-                <li>
-                    <button class="style-btn current" type="button">Все</button>
-                </li>
-                <li>
-                    <button class="style-btn" type="button">Веб-сайты</button>
-                </li>
-                <li>
-                    <button class="style-btn" type="button">Приложения</button>
-                </li>
-                <li>
-                    <button class="style-btn" type="button">Дизайн</button>
-                </li>
-                <li>
-                    <button class="style-btn" type="button">Маркетинг</button>
-                </li>
-            </ul>
-        </div>
-        <section class="section title-theme-light">
-            <h1>Каталог работ</h1>
-            <ul class="list">
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_1.jpg" alt="наши сотрудники" width="370" height="294" />
-                        <h2 class="section-works">Технокряк</h2>
-                        <p class="subtytle">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_2.jpg" alt="баскетбол" width="370" height="294" />
-                        <h2 class="section-works">Постер New Orlean vs Golden Star</h2>
-                        <p class="subtytle">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_3.jpg" alt="морепродукты" width="370" height="294" />
-                        <h2 class="section-works">Ресторан Seafood</h2>
-                        <p class="subtytle">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_4.jpg" alt="наушники" width="370" height="294" />
-                        <h2 class="section-works">Проект Prime</h2>
-                        <p class="subtytle">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_5.jpg" alt="коробочки" width="370" height="294" />
-                        <h2 class="section-works">Проект Boxes</h2>
-                        <p class="subtytle">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_6.jpg" alt="монитор" width="370" height="294" />
-                        <h2 class="section-works">Inspiration has no Borders</h2>
-                        <p class="subtytle">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_7.jpg" alt="книга" width="370" height="294" />
-                        <h2 class="section-works">Издание Limited Edition</h2>
-                        <p class="subtytle">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_8.jpg" alt="этикетка" width="370" height="294" />
-                        <h2 class="section-works">Проект LAB</h2>
-                        <p class="subtytle">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="/images/portfolio_9.jpg" alt="ноутбук" width="370" height="294" />
-                        <h2 class="section-works">Growing Business</h2>
-                        <p class="subtytle">Приложение</p>
-                    </a>
-                </li>
-            </ul>
+      <section class="section-background-theme-light">
+        <h1>Каталог работ</h1>
+        <ul class="list">
+          <li>
+            <button class="style-btn current" type="button">Все</button>
+          </li>
+          <li>
+            <button class="style-btn" type="button">Веб-сайты</button>
+          </li>
+          <li>
+            <button class="style-btn" type="button">Приложения</button>
+          </li>
+          <li>
+            <button class="style-btn" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="style-btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+        <ul class="list">
+          <li>
+            <a href="" class="link">
+              <img
+                src="/images/portfolio_1.jpg"
+                alt="наши сотрудники"
+                width="370"
+                height="294"
+              />
+              <h2 class="section-works">Технокряк</h2>
+              <p class="subtytle">Веб-сайт</p>
+            </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_2.jpg" alt="баскетбол" width="370" height="294" />
+                    <h2 class="section-works">Постер New Orlean vs Golden Star</h2>
+                    <p class="subtytle">Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_3.jpg" alt="морепродукты" width="370" height="294" />
+                    <h2 class="section-works">Ресторан Seafood</h2>
+                    <p class="subtytle">Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_4.jpg" alt="наушники" width="370" height="294" />
+                    <h2 class="section-works">Проект Prime</h2>
+                    <p class="subtytle">Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_5.jpg" alt="коробочки" width="370" height="294" />
+                    <h2 class="section-works">Проект Boxes</h2>
+                    <p class="subtytle">Приложение</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_6.jpg" alt="монитор" width="370" height="294" />
+                    <h2 class="section-works">Inspiration has no Borders</h2>
+                    <p class="subtytle">Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_7.jpg" alt="книга" width="370" height="294" />
+                    <h2 class="section-works">Издание Limited Edition</h2>
+                    <p class="subtytle">Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_8.jpg" alt="этикетка" width="370" height="294" />
+                    <h2 class="section-works">Проект LAB</h2>
+                    <p class="subtytle">Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="link">
+                    <img src="/images/portfolio_9.jpg" alt="ноутбук" width="370" height="294" />
+                    <h2 class="section-works">Growing Business</h2>
+                    <p class="subtytle">Приложение</p>
+                </a>
+            </li>
+        </ul>
         </section>
-    </main>
-    <footer class="footer">
-        <a class="logo link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
+        </main>
+        <footer class="footer">
+            <a class="logo link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
       >
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a
@@ -148,7 +153,7 @@
           </li>
           <li>
             <a href="tel:+380961111111" class="link contact-info-item"
-              >+380961111111</a
+              >+38 096 111 11 11</a
             >
           </li>
         </ul>
