--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
       </ul>
     </header>
     <main>
-      <section class="section-background-theme-light">
+      <section>
         <h1>Каталог работ</h1>
         <ul class="list">
           <li>
