--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <ul class="menu list">
             <li>
-                <a href="mailto:info@devstudio.com" class="contact-nav link">info@devstudio.com</a
+                <a href="mailto:info@devstudio.com" class="contact-nav link current">info@devstudio.com</a
           >
         </li>
         <li>
@@ -50,32 +50,32 @@
         <button class="modal-btn" type="button">Заказать услугу</button>
       </section>
       <!--ABOUT-->
-      <section class="section-theme-light">
+      <section>
         <h2 class="section-title">Преимущества</h2>
         <ul class="list">
           <li>
-            <h3 class="feature-title">Внимание к деталям</h3>
+            <h3 class="feature-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="feature-title">Пунктуальность</h3>
+            <h3 class="feature-title">ПУНКТУАЛЬНОСТЬ</h3>
             <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="feature-title">Планирование</h3>
+            <h3 class="feature-title">ПЛАНИРОВАНИЕ</h3>
             <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="feature-title">Современные технологии</h3>
+            <h3 class="feature-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
             <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -84,7 +84,7 @@
         </ul>
       </section>
       <!--GALLERY-->
-      <section class="section-title-theme-light">
+      <section>
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
