--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <ul class="menu list">
             <li>
-                <a href="mailto:info@devstudio.com" class="contact-nav link current">info@devstudio.com</a
+                <a href="mailto:info@devstudio.com" class="contact-nav link">info@devstudio.com</a
           >
         </li>
         <li>
